<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/project_gamma_header"
            />

        <TextView
            android:id="@+id/text_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="-30dp"
            android:text="@string/project_gamma_info" />

        <Button
            android:id="@+id/button_make_api_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:text="@string/load_refresh_data" />

        <Button
            android:id="@+id/showMultiSelectDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:text="@string/select_options" />

        <Button
            android:id="@+id/showMultiSelectDialogButtonData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:text="@string/select_data_options" />

        <Button
            android:id="@+id/select_deselect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:text="@string/select_deselect_all_invasions" />

        <TextView
            android:id="@+id/selectedItemsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/selected_items_will_appear_here" />

        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/loading_data_may_take_a_few_seconds" />
    </LinearLayout>

</ScrollView>
